# Toyota_Remote_Controller

./: CMakeLists.txt  README.md  build.sh
Client/: CMakeLists.txt  file_parser.c  file_parser.h  main.c  main.h
SDK/: CMakeLists.txt
SDK/include/: toyota_client.h  toyota_utils.h
SDK/include/Main_Objects/: firmware_update.h  headlights_control.h  humidity.h
SDK/src/: toyota_client.c  toyota_utils.c
SDK/src/Main_Objects/: firmware_update.c  headlights_control.c  humidity.c
xmls/: 33204.xml  33205.xml
